Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog


GIT HEAD

* Added this "Don't ask/show this again" option to some if not most
  of the nagging warning/error message boxes. (EXPERIMENTAL)
 
* Mac OS X: Fixed default path of linuxsampler binary.

* When closing qsampler and showing the user the dialog whether to
  stop the LinuxSampler backend, set the default selection to "Yes".

* Master volume slider now getting proper layout when changing its
  main toolbar orientation.

* Messages standard output capture has been slightly improved
  as for non-blocking i/o, whenever available. (EXPERIMENTAL)

* Adjusted configure check for libgig to detect the new includedir.

* A man page has beed added (making up Matt Flax's work on
  debian, thanks).

* Translations install directory change. (EXPERIMENTAL)

* Added support for SF2 instrument names/preset enumeration.
  (EXPERIMENTAL)

* Added instrument list popup on channel strip which shows up when
  the instrument name is clicked. Allows faster switching among
  instruments of the same file.

* Adjusted configure check for libgig to detect its new libdir
  (impolitely forcing the user now to have at least libgig 3.3.0).


0.2.3  2013-12-31  A fifth of a Jubilee.

* Allow the build system to include an user specified LDFLAGS.

* More preparations for Qt5 configure build.

* Standard scalable format (SVG) and MIME type icons support for
  session files (*.lscp) is now being added.

* Preparations for Qt5 migration.

* Added include <unistd.h> to shut up gcc 4.7 build failures.

* Make(ing) -jN parallel builds now available for the masses.

* Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir, --localedir.

* Made lookup of translation files work inside a Mac OS X bundle.

* Minor Mac OS X compilation error fix.

* Debugging stacktrace now applies to all working threads.

* Made lookup of translation files more robust on Windows.
