@@ -54,6 +54,7 @@ interface of LinuxSampler Control Protocol (LSCP) (http://www.linuxsampler.org).
 %dir %{_datadir}/icons/hicolor/scalable/mimetypes
 %dir %{_datadir}/%{name}
 %dir %{_datadir}/%{name}/translations
+%dir %{_datadir}/appdata
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
 %{_bindir}/%{name}
@@ -64,6 +65,7 @@ interface of LinuxSampler Control Protocol (LSCP) (http://www.linuxsampler.org).
 %{_datadir}/icons/hicolor/scalable/apps/%{name}.svg
 %{_datadir}/icons/hicolor/scalable/mimetypes/application-x-%{name}*.svg
 %{_datadir}/%{name}/translations/%{name}_*.qm
+%{_datadir}/appdata/%{name}.appdata.xml
 %{_datadir}/man/man1/%{name}.1.gz
 
 %changelog
